--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/fragmentContainer"
         android:layout_height="0dp"
         android:layout_gravity="fill"
         android:layout_marginTop="@dimen/activity_vertical_margin"
@@ -51,14 +52,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill_horizontal"
-            android:gravity="center_horizontal"
-            android:text="@string/taggedSearches"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+
 
         <ListView
             android:id="@android:id/list"
